@@ -1,3 +1,14 @@
+2009-12-16  Dan Winship  <danw@gnome.org>
+
+        Reviewed by Gustavo Noronha Silva.
+
+        Content-Encoding support
+
+        https://bugs.webkit.org/show_bug.cgi?id=522772
+
+        * webkit/webkitprivate.cpp:
+        (webkit_init): add a SoupContentDecoder feature to the session
+
 2009-12-16  Christian Dywan  <christian@twotoasts.de>
 
         Reviewed by Gustavo Noronha Silva.
